unified_montrg_api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unified-montrg
  labels:
    app.kubernetes.io/name: unified-montrg
    app.kubernetes.io/component: api
